--- a/run-buddy/assets/css/style.css
+++ b/run-buddy/assets/css/style.css
@@ -18,9 +18,11 @@ header {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
   background-image: url("../images/hero-bg.jpg");
   background-size: cover;
-  background-position: center;
   background-attachment: fixed;
   background-position: 80%;
 }
@@ -55,6 +57,13 @@ header nav ul li a {
   font-weight: lighter;
   font-size: 1.55vw;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+header nav ul li a:hover {
+  background: #fce138;
+  color: #024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 
 /* HEADER / NAVBAR STYLES END */
@@ -96,7 +105,6 @@ section {
 .hero {
   background-image: url('../images/hero-bg.jpg');
   background-size: cover;
-  background-position: center;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -123,13 +131,17 @@ section {
 
 .hero-form {
   border: 3px solid #024e76;
-  background-color: rgba(252, 225, 56, 0.8);
+  background-color: rgba(255, 225, 56, 0.8);
   padding: 20px;
   color: #024e76;
   width: 40%;
   margin: 3.5%;
-  box-shadow: 0 0 10px rgba(252, 225, 56, 0.8);
   border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.hero-form button:hover {
+  background-color: #39a6b2;  
 }
 
 .hero-form h3 {
@@ -214,15 +226,11 @@ section {
   margin: 50px auto;
   padding-bottom: 50px;
   width: 80%;
+  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #39a6b2;
-}
-
-.step:nth-child(even) {
-  border-bottom: 1px solid #39a6b2;
 }
 
 .step:last-child {
@@ -265,7 +273,6 @@ section {
   line-height: 1.5;
   color: #024e76;
 }
-
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
@@ -311,7 +318,6 @@ section {
 /* REACH OUT STYLES START */
 .contact {
   background: #024e76;
-
 }
 
 .contact h2 {
@@ -362,7 +368,7 @@ section {
   background-color: rgba(255,255,255, 0.75);
 }
 
-.contact-form input:focus {
+.contact-form input:focus, .contact-form textarea:focus {
   background-color: rgba(255,255,255, 1);
   outline: none;
 }
@@ -386,8 +392,6 @@ section {
 .contact-info a {
   color: #fce138;
 }
-
-
 /* REACH OUT STYLES END */
 
 /* UTILITIES */
@@ -403,11 +407,12 @@ section {
   display: flex;
 }
 
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
   header {
     padding-bottom: 0;
     justify-content: center;
-    position:relative;
+    position: relative;
   }
 
   header h1 {
@@ -423,13 +428,6 @@ section {
 
   header nav ul li a {
     font-size: 20px;
-  }
-
-  header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
-    border-radius: 15px;
-    text-shadow: none;
   }
 
   footer h2, footer div {
@@ -458,10 +456,12 @@ section {
   }
 }
 
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
   section {
     padding: 30px 15px;
   }
+
   .step h3 {
     flex: 1 100%;
     text-align: center;
@@ -483,15 +483,16 @@ section {
   .step-text {
     flex: 100%;  
   }
+
+  .trainer-bio h3, .trainer-bio h4 {
+    display: block;
+  }
 }
 
-@media screen and (max-width: 768px) {
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
   .hero-form button {
     width: 100%;
-  }
-
-  .hero-form button:hover {
-    background-color: #39a6b2;  
   }
 
   .section-title {
@@ -513,9 +514,7 @@ section {
   .contact-info > * {
     flex: 0 100%;
   }
-}
 
-@media screen and (max-width: 575px) {
   .contact-form {
     order: 3;
   }
